fixed styling and refactoring

--- a/src/app/game/components/game/game.component.html
+++ b/src/app/game/components/game/game.component.html
@@ -1,3 +1,4 @@
 <div id="container">
   <ion-button expand="block" onclick="openMenu()">New Game</ion-button>
+  <ion-button expand="block" onclick="openMenu()">Join Game</ion-button>
 </div>
