initial phase components

--- a/src/app/game/components/game/game.component.html
+++ b/src/app/game/components/game/game.component.html
@@ -1,4 +1,6 @@
 <div id="container">
-  <ion-button expand="block" onclick="openMenu()">New Game</ion-button>
-  <ion-button expand="block" onclick="openMenu()">Join Game</ion-button>
+  <ion-button expand="block" (click)="navigateToOptions()">New Game</ion-button>
+  <ion-button expand="block" (click)="navigateToJoinRoom()"
+    >Join Game</ion-button
+  >
 </div>
