--- a/src/app/game/components/options/options.component.html
+++ b/src/app/game/components/options/options.component.html
@@ -1,1 +1,18 @@
-<p>options works!</p>
+<form [formGroup]="optionsFormGroup">
+  <ion-list lines="full" class="ion-no-margin">
+    <ion-list-header lines="full">
+      <ion-label>Choose Game Options</ion-label>
+    </ion-list-header>
+    <ion-item>
+      <ion-label position="floating">Room Name</ion-label>
+      <ion-input formControlName="roomName"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Number of Teams</ion-label>
+      <ion-input type="number" formControlName="numberOfTeams"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-button (click)="createRoom()" expand="block" shape="round">
+    Create Room
+  </ion-button>
+</form>
