--- a/src/app/layout/components/navigation/navigation.component.html
+++ b/src/app/layout/components/navigation/navigation.component.html
@@ -7,9 +7,7 @@
     </ion-header>
     <ion-content>
       <ion-list id="inbox-list">
-        <ion-list-header>Inbox</ion-list-header>
-        <ion-note>hi@ionicframework.com</ion-note>
-
+        <ion-list-header>Welcome</ion-list-header>
         <ion-menu-toggle
           auto-hide="false"
           *ngFor="let p of appPages; let i = index"
