--- a/src/app/game/components/options/options.component.html
+++ b/src/app/game/components/options/options.component.html
@@ -8,8 +8,20 @@
       <ion-input formControlName="roomName"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label position="floating">Your Name</ion-label>
+      <ion-input
+        [formControl]="
+          optionsFormGroup.get('personDetails').get('0').get('name')
+        "
+      ></ion-input>
+    </ion-item>
+    <ion-item>
       <ion-label position="floating">Number of Teams</ion-label>
       <ion-input type="number" formControlName="numberOfTeams"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="floating">Words per Person</ion-label>
+      <ion-input type="number" formControlName="wordsPerPerson"></ion-input>
     </ion-item>
   </ion-list>
   <ion-button (click)="createRoom()" expand="block" shape="round">
