--- a/src/app/game/components/join-room/join-room.component.html
+++ b/src/app/game/components/join-room/join-room.component.html
@@ -18,7 +18,7 @@
       expand="block"
       shape="round"
     >
-      Create Room
+      Join Room
     </ion-button>
   </ion-card-content>
 </ion-card>
