--- a/src/app/game/components/waiting-area/waiting-area.component.html
+++ b/src/app/game/components/waiting-area/waiting-area.component.html
@@ -11,7 +11,12 @@
         <ion-label position="floating">{{ person.name }}</ion-label>
       </ion-item>
     </ion-list>
-    <ion-button (click)="startGame()" expand="block" shape="round">
+    <ion-button
+      *ngIf="isAdmin"
+      (click)="startGame()"
+      expand="block"
+      shape="round"
+    >
       Start Game
     </ion-button>
   </ion-card-content>
