assigning teams to members randomly and navigating to word selection

--- a/src/app/game/components/join-room/join-room.component.html
+++ b/src/app/game/components/join-room/join-room.component.html
@@ -20,5 +20,6 @@
     >
       Join Room
     </ion-button>
+    <ion-label color="danger" *ngIf="isStarted">Game already Started</ion-label>
   </ion-card-content>
 </ion-card>
