--- a/src/app/game/components/join-room/join-room.component.html
+++ b/src/app/game/components/join-room/join-room.component.html
@@ -20,6 +20,8 @@
     >
       Join Room
     </ion-button>
-    <ion-label color="danger" *ngIf="isStarted">Game already Started</ion-label>
+    <ion-label color="danger" *ngIf="roomClosed"
+      >Game already Started</ion-label
+    >
   </ion-card-content>
 </ion-card>
