implemented logic for correct answer and fixed timer memory issue

--- a/src/app/game/components/game-screen/game-screen.component.html
+++ b/src/app/game/components/game-screen/game-screen.component.html
@@ -32,6 +32,7 @@
       </ion-button>
       <ion-button
         color="warning"
+        *ngIf="secondsRemaining === '00:00'"
         (click)="wrong()"
         expand="block"
         shape="round"
