fixed scores push issue while creating room and fixed color of players in the waiting area

--- a/src/app/game/components/waiting-area/waiting-area.component.html
+++ b/src/app/game/components/waiting-area/waiting-area.component.html
@@ -8,7 +8,9 @@
         <ion-label>Players' List</ion-label>
       </ion-list-header>
       <ion-item *ngFor="let person of personDetails">
-        <ion-label position="floating">{{ person.name }}</ion-label>
+        <ion-label color="primary" position="floating">{{
+          person.name
+        }}</ion-label>
       </ion-item>
     </ion-list>
     <ion-button
