--- a/src/app/game/components/options/options.component.html
+++ b/src/app/game/components/options/options.component.html
@@ -9,11 +9,7 @@
     </ion-item>
     <ion-item>
       <ion-label position="floating">Your Name</ion-label>
-      <ion-input
-        [formControl]="
-          optionsFormGroup.get('personDetails').get('0').get('name')
-        "
-      ></ion-input>
+      <ion-input [formControl]="nameFormControl"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Number of Teams</ion-label>
