Trying to delete current deadline in the game document in the firebase

--- a/src/app/game/components/game-screen/game-screen.component.html
+++ b/src/app/game/components/game-screen/game-screen.component.html
@@ -16,7 +16,7 @@
     <ion-card-content>
       <strong class="capitalize">{{ currentWord?.value }}</strong>
       <ion-button
-        *ngIf="!currentWord"
+        *ngIf="!(currentWord && currentDeadline)"
         (click)="showWord()"
         expand="block"
         shape="round"
